<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView
		android:id="@+id/vscroll1"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:id="@+id/linear1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/open_useragent"
				android:textSize="18sp"
				android:textStyle="bold|italic"
				android:textColor="#00FF00"
				android:layout_gravity="center_horizontal" />
			<TextView
				android:id="@+id/textview2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/if_pc_off"
				android:textSize="18sp"
				android:textStyle="bold"
				android:textColor="#FF0070"
				android:layout_gravity="center_horizontal" />
			<LinearLayout
				android:id="@+id/linear2"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:orientation="horizontal">
				<Button
					android:id="@+id/std"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="@string/standard"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/android14"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="ANDROID 14"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/iphone"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="IPHONE OS 17.1"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/ipad17"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="IPAD OS 17.1"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/ios5"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#FF0000"
					android:text="IPHONE OS 5"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/iPad"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#FF0000"
					android:text="IPAD OS 3.2"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/Symbian"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#FF0000"
					android:text="SYMBIAN 9.4"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/android4"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#FF0000"
					android:text="ANDROID 4.4"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
			</LinearLayout>
			<AutoCompleteTextView
				android:id="@+id/autocomplete1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="12sp"
				android:textColor="#00FF00"
				android:hint="@string/current_ua"
				android:textColorHint="#7000FF" />
			<TextView
				android:id="@+id/textview3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/if_pc_on"
				android:textSize="18sp"
				android:textStyle="bold"
				android:textColor="#FF0070"
				android:layout_gravity="center_horizontal" />
			<LinearLayout
				android:id="@+id/linear4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/windows11"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="WINDOWS 11"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/macos14"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="MACOS 14.1"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/linuxi686"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="LINUX I686"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/linear5"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:id="@+id/windows10"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#00FF00"
					android:text="WINDOWS 10"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/windowsxp"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#FF0000"
					android:text="WINDOWS XP"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
				<Button
					android:id="@+id/win95"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="8dp"
					android:background="#FF0000"
					android:text="WINDOWS 95"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_weight="1" />
			</LinearLayout>
			<AutoCompleteTextView
				android:id="@+id/autocomplete3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textSize="12sp"
				android:textColor="#00FF00"
				android:hint="@string/current_ua"
				android:textColorHint="#7000FF" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
